--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,9 @@ jwt.secret=52344E62DC399D1A15AC51A65F1DE
 jwt.access.expiration_time=60
 jwt.refresh.expiration_time=1440
 
+#Remember-Me
+remember.key=52344E62DC399D1A15AC51A65F1DE
+remember.expiration_time=86400
 #Cloudinary
 cloudinary.cloud_name=
 cloudinary.api_key=
