--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:mysql://103.195.236.162:3306/rentalcar?createDatabase
 spring.datasource.username=kienpro-dev
 spring.datasource.password=123456
 #JPA / HIBERNATE
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
