--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,8 +29,8 @@ cloudinary.api_key=
 cloudinary.api_secret=
 
 #Mail
-mail.username=
-mail.password=
+mail.username=tienkiennropro@gmail.com
+mail.password=nwggxnjqcgyxhkyo
 
 #Swagger
 springdoc.api-docs.enabled=true
