--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 #App
 server.port=8080
 spring.application.name=project-base
+spring.main.allow-bean-definition-overriding=true
 
 #DATABASE
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
