--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,8 +5,8 @@ spring.main.allow-bean-definition-overriding=true
 
 #DATABASE
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://103.195.236.162:3306/rentalcar?createDatabaseIfNotExist=true
-spring.datasource.username=kienpro-dev
+spring.datasource.url=jdbc:mysql://localhost:3306/rentalcar?createDatabaseIfNotExist=true
+spring.datasource.username=root
 spring.datasource.password=123456
 #JPA / HIBERNATE
 #spring.jpa.show-sql=true
